--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -167,7 +167,8 @@
     %footer
       %a.outfit-rename-button{:href => '#'} rename
       %a.outfit-delete{:href => '#'} delete
-    %img.outfit-thumbnail
+    .outfit-thumbnail-wrapper
+      %img.outfit-thumbnail
     .outfit-delete-confirmation
       %span Delete?
       %a.outfit-delete-confirmation-yes{:href => '#'} yes
