--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
     = yield :stylesheets
     = stylesheet_link_tag "compiled/screen"
     = yield :meta
+    = open_graph_tags
     = csrf_meta_tag
     = signed_in_meta_tag
   %body{:class => body_class}
