--- a/app/views/outfits/show.html.haml
+++ b/app/views/outfits/show.html.haml
@@ -1,6 +1,11 @@
 - title(@outfit.name || "Shared outfit")
 - content_for :before_title, campaign_progress
 
+- open_graph :type => 'openneo-impress:outfit', :title => yield(:title),
+  :url => outfit_url(@outfit)
+- if @outfit.image?
+  - open_graph :image => absolute_url(@outfit.image.url)
+
 = link_to_edit_outfit(@outfit, :class => 'button', :id => 'outfit-wardrobe-link') do
   Edit
   - unless user_signed_in? && @outfit.user == current_user
