outfit thumbnails beta message

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -641,6 +641,13 @@ body.outfits-edit
     
     #preview-sharing-thumbnail, #preview-sharing-thumbnail-generating
       display: none
+    
+    #preview-sharing-beta-note
+      +sidebar-view-child
+      +warning
+      font-size: 85%
+      margin-top: 1em
+      text-align: center
       
     &.urls-loaded
       #preview-sharing-thumbnail-saving
