fix outfit thumbnail opacity on hover/active

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -490,7 +490,7 @@ body.outfits-edit
           header
             +opacity(1)
           
-          .outfit-thumbnail
+          .outfit-thumbnail-wrapper
             +opacity(0.75)
           
           footer
@@ -501,7 +501,7 @@ body.outfits-edit
             +opacity(1)
             font-weight: bold
           
-          .outfit-thumbnail
+          .outfit-thumbnail-wrapper
             +opacity(1)
         
         &.confirming-deletion
