--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -62,7 +62,7 @@
         = image_tag 'http://images.neopets.com/items/mall_ac_garland_spotlight.gif'
       %h3
         %a{:href => bulk_pets_path}
-          Modeling
+          Modeling Hub
       %div
         %h4 Found something?
         %p
