improve closet performance by caching item link

--- a/app/views/closet_lists/_closet_list.html.haml
+++ b/app/views/closet_lists/_closet_list.html.haml
@@ -1,13 +1,13 @@
-.closet-list{'data-id' => closet_list.id, 'data-hangers-count' => closet_list.hangers.count, :id => "closet-list-#{closet_list.id}"}
+.closet-list{'data-id' => closet_list.id, 'data-hangers-count' => closet_list.hangers.size, :id => "closet-list-#{closet_list.id}"}
   %header
     - if show_controls
-      = form_for [closet_list.user, closet_list], :html => {:class => 'visibility-form'} do |f|
+      = form_for [current_user, closet_list], :html => {:class => 'visibility-form'} do |f|
         = f.select :visibility, closet_visibility_choices(:human_name)
         = f.submit "Save"
         = closet_visibility_descriptions('items in this list')
       .closet-list-controls
-        = link_to 'Edit', edit_user_closet_list_path(closet_list.user, closet_list)
-        = form_tag user_closet_list_path(closet_list.user, closet_list), :method => 'delete' do
+        = link_to 'Edit', edit_user_closet_list_path(closet_list.user_id, closet_list)
+        = form_tag user_closet_list_path(closet_list.user_id, closet_list), :method => 'delete' do
           = submit_tag 'Delete', :confirm => closet_list_delete_confirmation(closet_list)
     %h4= closet_list.name
 
