cache newest items on homepage and items#index

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -14,32 +14,35 @@
     = will_paginate @items
 - else
   #search-info
-    #search-help
-      %h2 Find what you're looking for
-      %dl
-        %dt kreludor  "altador cup" -background
-        %dd
-          returns any item with the word "kreludor" and the phrase "altador cup"
-          in it, but not the word "background"
-        %dt hat user:owns
-        %dd
-          returns
-          = link_to 'items that you own', your_items_path
-          with the word "hat"
-        %dt blue is:nc
-        %dd returns any NC Mall item with the word "blue" in it
-        %dt collar -is:pb
-        %dd returns any item with the word "collar" in it that isn't from a paint brush
-        %dt species:shoyru
-        %dd returns any item a Shoyru can wear
-        %dt type:hat
-        %dd returns any item that fills a "hat" zone
+    - cache :action_suffix => 'search_help' do
+      #search-help
+        %h2 Find what you're looking for
+        %dl
+          %dt kreludor  "altador cup" -background
+          %dd
+            returns any item with the word "kreludor" and the phrase "altador cup"
+            in it, but not the word "background"
+          %dt hat user:owns
+          %dd
+            returns
+            = link_to 'items that you own', your_items_path
+            with the word "hat"
+          %dt blue is:nc
+          %dd returns any NC Mall item with the word "blue" in it
+          %dt collar -is:pb
+          %dd returns any item with the word "collar" in it that isn't from a paint brush
+          %dt species:shoyru
+          %dd returns any item a Shoyru can wear
+          %dt type:hat
+          %dd returns any item that fills a "hat" zone
 
-    #search-new-items
-      %h2 Newest items
-      = render @newest_items
+    - cache 'items#index newest_items' do
+      #search-new-items
+        %h2 Newest items
+        = render @newest_items
 
-  #species-search-links
-    %h2 Can't decide? Search by species
-    = standard_species_search_links
+  - cache :action_suffix => 'species_search_links' do
+    #species-search-links
+      %h2 Can't decide? Search by species
+      = standard_species_search_links
 
