--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -9,7 +9,7 @@
       = nc_icon_for(@item)
       - unless @item.rarity.blank?
         == Rarity: #{@item.rarity_index} (#{@item.rarity})
-      = link_to 'NeoItems', neoitems_url_for(@item)
+      = link_to 'JN Items', jn_items_url_for(@item)
       - unless @item.nc?
         = link_to 'Shop Wizard', shop_wizard_url_for(@item)
         = link_to 'Super Wizard', super_shop_wizard_url_for(@item)
